# octray

./: .gitmodules  CMakeLists.txt  README.md
include/: base_octree_node.hpp  octray_node.hpp  vectors.hpp  visualization_util.hpp
libs/glad/: .gitignore  README.md
shaders/: cube_fragment_shader.glsl  cube_vertex_shader.glsl
src/: octray_node.cpp  octray_viz.cpp
